--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     -->
     <title>The Chase Copy</title>
   </head>
-  <body style=background-color:white>
+  <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
